--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,13 +29,16 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  cursor:pointer;
 }
 .textmain{
   color: black;
   text-align: center;
   margin-top: 60px;
 }
-
+button{
+  cursor:pointer
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
